--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,4 +4,8 @@
         <meta charset="UTF-8">
         <script src="chat.js"></script>
     </head>
+    <body>
+        <input type="text" id="message">
+        <button type="button" id="send">메세지 전송</button>
+    </body>
 </html>
