--- a/front_app/chatting_fe/src/common.sass
+++ b/front_app/chatting_fe/src/common.sass
@@ -3,15 +3,25 @@ $orange: orange
 $green: green
 $blue: blue
 
+@mixin sizeBox($size) 
+    $calculated: 50px * $size
+    height: $calculated
+
 .container
     button
-        height: 100px
         width: 100%
         &.red
             background: $red
+            @include sizeBox(1)
+
         &.orange 
             background: $orange
+            @include sizeBox(2)
+
         &.green
             background: $green
+            @include sizeBox(3)
+
         &.blue
             background: $blue
+            @include sizeBox(4)
