--- a/front_app/chatting_fe/src/index.css
+++ b/front_app/chatting_fe/src/index.css
@@ -1,13 +1,8 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+* { box-sizing: border-box; outline: none; color: #000; }
+body { margin: 0; }
+html { font-size: 13px; }
+ul, ol { list-style: none; margin:0; padding: 0; }
+li { padding: 0; margin: 0; padding: 0; }
+a { text-decoration: none; }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+main { padding: 20px; background: #f8f8f8; }
